# Multaneous

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
multaneous/: __init__.py  cli.py  func.py
