[build-system]
requires = [
  "setuptools >= 68",
  "wheel"
]
build-backend = "setuptools.build_meta"
[project]
name="Multaneous",
authors=[
{name="General Zero", email="GeneralZeroCosmo@gmail.com"}
],
version="0.0.1",
description="A multi-purpose digital library made to multi assist you.",
readme="README.md",
license={text = "Apache Software License 2.0"}
requires-python=">=3.8",
classifier=[
"Intended Audience :: Developers",
"License :: OSI Approved :: Apache Software License",
"Programming Language :: Python",
"Topic :: Utilities"
],
keywords=["multaneous", "Multaneous", "MULTANEOUS"],
script={multaneous = "multaneous.cli:main"},
dependencies=["requests"]
