[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "Multaneous"
authors = [
  { name = "General Zero", email = "GeneralZeroCosmo@gmail.com" }
]
version = "0.0.1"
description = "A multi-purpose digital library made to multi assist you."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache Software License 2.0" }
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries"
]
keywords = ["multaneous"]
dependencies = ["requests"]

[project.scripts]
multaneous = "multaneous.cli:main"
